...
        .toolbar {
            ToolbarItemGroup(placement: .bottomBar) {
                Button(action: {
                    isPresentingNewTodoView = true
                }) {
                    Image(systemName: "plus")
                }.accessibilityLabel("New Todo")
                
                NavigationLink(destination: UserPreferencesView()) {
                    Image(systemName: "ellipsis")
                }
                .accessibilityLabel("More")
            }
...
                            Button("Dismiss") {
                                isPresentingNewTodoView = false
                                newTodoData = Todo.Data()
                            }
                        }
                        ToolbarItem(placement: .confirmationAction) {
                            Button("Add") {
                                Task{
                                    isPresentingNewTodoView = false
                                    let newTodo = Todo(data: newTodoData)
                                    await  todoViewModel.addTodo(todo: newTodo)
                                    newTodoData = Todo.Data()
                                }
...
